[package]
name = "wasm-demo"
version = "0.1.0"
authors = ["jeff <jefflyop1@gmail.com>"]
edition = "2018"
description = "rust wasm demo"
repository = "https://github.com/stoneflyop1/wasm-demo.git"
license = "MIT"

[lib]
crate-type=["cdylib"]

[dependencies]
serde = "1.0.90"
serde_derive = "1.0.90"

[dependencies.wasm-bindgen]
version = "0.2.42"
features = ["serde-serialize"]

[dev-dependencies]
wasm-bindgen-test = "0.2.42"